# Reclass

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.claude/: iteration_state.json
.github/workflows/: build.yml
cmake/: deploy.cmake  raw_pdb_prefix.h
msvc/: ProcessMemoryPlugin.vcxproj  RcNetCompatPlugin.vcxproj  Reclass.slnx  Reclass.vcxproj  Reclass.vcxproj.filters  RemoteProcessMemoryPlugin.vcxproj  WinDbgMemoryPlugin.vcxproj  fadec.vcxproj  qscintilla.vcxproj
plugins/KernelMemory/: CMakeLists.txt  KernelMemoryPlugin.cpp  KernelMemoryPlugin.h  rcx_drv_protocol.h
plugins/KernelMemory/driver/: build_driver.bat  rcxdrv.c
plugins/KernelMemory/linux/: Makefile  rcxkm.c
plugins/ProcessMemory/: CMakeLists.txt  ProcessMemoryPlugin.cpp  ProcessMemoryPlugin.h
plugins/ProcessMemoryWindows/: CMakeLists.txt  ProcessMemoryWindowsPlugin.cpp  ProcessMemoryWindowsPlugin.h
plugins/RcNetPluginCompatLayer/: CMakeLists.txt  RcNetCompatPlugin.cpp
plugins/RemoteProcessMemory/: CMakeLists.txt  RemoteProcessMemoryPlugin.cpp  RemoteProcessMemoryPlugin.h  rcx_rpc_protocol.h
plugins/WinDbgMemory/: CMakeLists.txt  WinDbgMemoryPlugin.cpp  WinDbgMemoryPlugin.h
scripts/: build.ps1  build_macos.sh  build_qscintilla.ps1
src/: addressparser.cpp  addressparser.h  app.rc  clipboard.h  code_highlight.h  commandpalette.h  commontypes.h  compose.cpp  controller.cpp  controller.h  core.h  diffutil.h  dock_tab_buttons.h  dockoverlay.h  docksizereadout.h  editor.cpp  editor.h  export_reclass_xml.cpp  export_reclass_xml.h  fontutil.h  format.cpp  generator.cpp  generator.h  gotoaddressdialog.h  hextoolbarpopup.cpp  hextoolbarpopup.h  iplugin.h  macos_titlebar.h  macos_titlebar.mm  main.cpp  mainwindow.h  matrixscan.h  optionsdialog.cpp  optionsdialog.h  paintutil.h  pluginmanager.cpp  pluginmanager.h  processpicker.cpp  processpicker.h  processpicker.ui  (+32 more)
src/examples/: AlignmentBugDemo.rcx  Demo.rcx  EPROCESS.rcx  KUSER_SHARED_DATA.rcx  LargeClass.rcx  MMPFN.rcx  PE_Headers.rcx  PageTables.rcx  WinSDK.rcx  png.rcx  t6zm.rcx
src/icons/: class.icns
src/imports/: export_reclass_xml.cpp  import_pdb.cpp  import_pdb.h  import_pdb_dialog.cpp  import_pdb_dialog.h  import_reclass_xml.cpp  import_reclass_xml.h  import_source.cpp  import_source.h  pe_debug_info.cpp  pe_debug_info.h
src/mcp/: mcp_bridge.cpp  mcp_bridge.h
src/names/: bookmark_name_provider.cpp  bookmark_name_provider.h  name_provider.cpp  name_provider.h  name_registry.cpp  name_registry.h  pdb_name_provider.cpp  pdb_name_provider.h  pdb_type_provider.cpp  pdb_type_provider.h  rtti_name_provider.cpp  rtti_name_provider.h  symbol_demangle.cpp  symbol_demangle.h
src/providers/: buffer_provider.h  null_provider.h  process_provider.h  provider.h  snapshot_provider.h
src/themes/: theme.cpp  theme.h  themeeditor.cpp  themeeditor.h  thememanager.cpp  thememanager.h
src/themes/defaults/: long_night.json  mid.json  modern.json  phosphor.json  reclass_dark.json  tw.json  vs.json  warm.json
src/widgets/: category_chip.h  dialog_button.cpp  dialog_button.h  empty_overlay.h  enum_picker_popup.h  fuzzy_match.h  hover_preview.h  themed_dialog.cpp  themed_dialog.h  themed_inputdialog.cpp  themed_inputdialog.h  themed_messagebox.cpp  themed_messagebox.h  unified_symbol_panel.h
tests/: bench_large_class.cpp  bench_project.cpp  bench_spam_append.cpp  grab_tabs.cpp  test_32bit_support.cpp  test_addressparser.cpp  test_byte_selection.cpp  test_byte_selection_controller.cpp  test_chips.cpp  test_clipboard.cpp  test_com_security.cpp  test_command_palette.cpp  test_command_row.cpp  test_compose.cpp  test_context_menu.cpp  test_controller.cpp  test_core.cpp  test_dbgconnect.cpp  test_dbgdump.cpp  test_default_class_footer.cpp  test_disasm.cpp  test_doc_tab_chrome.cpp  test_dock_resize.cpp  test_dock_size_tip.cpp  test_editor.cpp  test_editor_border.cpp  test_export_xml.cpp  test_format.cpp  test_generator.cpp  test_goto_address.cpp  test_hairline_dpr.cpp  test_import_source.cpp  test_import_xml.cpp  test_kernel_provider.cpp  test_lenient_hex.cpp  test_matrixscan.cpp  test_mcp.cpp  test_new_class_selfattach.cpp  test_new_features.cpp  test_options_dialog.cpp  (+34 more)
tools/: coderender.cpp  editor_render.cpp  rcx-mcp-stdio.cpp  scanner_render.cpp  sourcechooser_render.cpp  titlebar_render.cpp  typeselector_render.cpp  vergilius_to_rcx.py
training2/lessons/: 07_enums_bitfields.md
